--- a/core/src/main/flex/org/dukecon/views/LocationView.mxml
+++ b/core/src/main/flex/org/dukecon/views/LocationView.mxml
@@ -5,6 +5,7 @@
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
         xmlns:s="library://ns.adobe.com/flex/spark"
         xmlns:u="org.dukecon.utils.*"
+        xmlns:parsley="http://www.spicefactory.org/parsley"
         title="{resourceManager.getString('dukecon', 'location.title')}"
         creationComplete="onCreationComplete(event)">
 
@@ -12,13 +13,16 @@
         [ResourceBundle("dukecon")]
     </fx:Metadata>
 
+    <fx:Declarations>
+        <parsley:Configure/>
+    </fx:Declarations>
+
     <fx:Script>
         <![CDATA[
         import mx.collections.ArrayCollection;
         import mx.events.FlexEvent;
 
         import org.dukecon.controller.ConferenceController;
-
         import org.dukecon.controller.LocationController;
         import org.dukecon.events.ListEvent;
 
@@ -30,6 +34,12 @@
 
         [Bindable]
         protected var talks:ArrayCollection;
+
+        [Inject]
+        public var conferenceController:ConferenceController;
+
+        [Inject]
+        public var locationController:LocationController;
 
         protected function onCreationComplete(event:FlexEvent):void {
             talkList.addEventListener(ListEvent.ITEM_SELECTED, onTalkSelected);
@@ -43,14 +53,17 @@
         override public function set data(value:Object):void {
             super.data = value;
             location = String(value);
-            locationIcon = LocationController.instance.getIconForLocation(location);
-            talks = ConferenceController.instance.getTalksForLocation(location);
+        }
+
+        override protected function commitProperties():void {
+            super.commitProperties();
+            locationIcon = locationController.getIconForLocation(location);
+            talks = conferenceController.getTalksForLocation(location);
         }
 
         protected function onTalkSelected(event:ListEvent):void {
             navigator.pushView(TalkView, event.data);
         }
-
         ]]>
     </fx:Script>
 
