--- a/core/src/main/flex/org/dukecon/itemrenderer/GridTalkItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/GridTalkItemRenderer.mxml
@@ -5,112 +5,118 @@
 <s:GridItemRenderer
         xmlns:fx="http://ns.adobe.com/mxml/2009"
         xmlns:s="library://ns.adobe.com/flex/spark"
-        xmlns:u="org.dukecon.utils.*">
+        xmlns:u="org.dukecon.utils.*"
+        xmlns:parsley="http://www.spicefactory.org/parsley">
 
-  <fx:Metadata>
-    [ResourceBundle("dukecon")]
-  </fx:Metadata>
+    <fx:Metadata>
+        [ResourceBundle("dukecon")]
+    </fx:Metadata>
 
-  <fx:Script>
+    <fx:Declarations>
+        <parsley:Configure/>
+    </fx:Declarations>
+
+    <fx:Script>
     <![CDATA[
-    import org.dukecon.controller.ConferenceController;
-    import org.dukecon.controller.TrackController;
-    import org.dukecon.controller.UserPreferenceController;
-    import org.dukecon.events.ListEvent;
-    import org.dukecon.model.Talk;
+        import org.dukecon.controller.TrackController;
+        import org.dukecon.controller.UserPreferenceController;
+        import org.dukecon.events.ListEvent;
+        import org.dukecon.model.Talk;
 
-    [Embed(source="/star-unselected.png")]
-    [Bindable]
-    public var starUnselected:Class;
+        [Embed(source="/star-unselected.png")]
+        [Bindable]
+        public var starUnselected:Class;
 
-    [Embed(source="/star-selected.png")]
-    [Bindable]
-    public var starSelected:Class;
+        [Embed(source="/star-selected.png")]
+        [Bindable]
+        public var starSelected:Class;
 
-    [Bindable]
-    protected var talk:Talk;
+        [Bindable]
+        protected var talk:Talk;
 
-    [Bindable("dataChange")]
-    override public function get data():Object {
-      return super.data;
-    }
+        [Inject]
+        public var trackController:TrackController;
 
-    override public function set data(value:Object):void {
-      super.data = value;
-      talk = Talk(value[column.dataField]);
-      if (talk) {
-        icon.source = TrackController.instance.getIconForTrack(talk.track);
-        icon.setActualSize(60, 60);
-        languageImage.visible = talk.language == "english";
-      } else {
-        icon.source = null;
-        languageImage.visible = false;
-      }
-      updateSelectionIcon();
-    }
+        [Inject]
+        public var userPreferenceController:UserPreferenceController;
 
-    protected function updateSelectionIcon():void {
-      if (talk) {
-        favoriteImage.source = UserPreferenceController.instance.isTalkSelected(talk) ? starSelected : starUnselected;
-      } else {
-        favoriteImage.source = null;
-      }
-    }
+        override protected function commitProperties():void {
+            super.commitProperties();
 
-    protected function toggleSelection(event:MouseEvent):void {
-      var controller:UserPreferenceController = UserPreferenceController.instance;
-      if (controller.isTalkSelected(talk)) {
-        controller.unselectTalk(talk);
-      } else {
-        controller.selectTalk(talk);
-      }
-      updateSelectionIcon();
-    }
+            talk = Talk(data[column.dataField]);
+            if (talk) {
+                icon.source = trackController.getIconForTrack(talk.track);
+                icon.setActualSize(60, 60);
+                languageImage.visible = talk.language == "english";
+            } else {
+                icon.source = null;
+                languageImage.visible = false;
+            }
 
-    protected function onMoreClicked(event:MouseEvent):void {
-      dispatchEvent(new ListEvent(talk, ListEvent.ITEM_SELECTED));
-    }
-    ]]>
+            updateSelectionIcon();
+        }
+
+        protected function updateSelectionIcon():void {
+            if (talk) {
+                favoriteImage.source = userPreferenceController.isTalkSelected(talk) ? starSelected : starUnselected;
+            } else {
+                favoriteImage.source = null;
+            }
+        }
+
+        protected function toggleSelection(event:MouseEvent):void {
+            if (userPreferenceController.isTalkSelected(talk)) {
+                userPreferenceController.unselectTalk(talk);
+            } else {
+                userPreferenceController.selectTalk(talk);
+            }
+            updateSelectionIcon();
+        }
+
+        protected function onMoreClicked(event:MouseEvent):void {
+            dispatchEvent(new ListEvent(talk, ListEvent.ITEM_SELECTED));
+        }
+        ]]>
   </fx:Script>
 
-  <s:Rect top="4" left="4" right="4" bottom="4" radiusX="10" radiusY="10" visible="{talk != null}">
-    <s:fill>
-      <s:SolidColor color="0xffffff"/>
-    </s:fill>
-    <s:stroke>
-      <s:SolidColorStroke color="0x000000"/>
-    </s:stroke>
-  </s:Rect>
+    <s:Rect top="4" left="4" right="4" bottom="4" radiusX="10" radiusY="10" visible="{talk != null}">
+        <s:fill>
+            <s:SolidColor color="0xffffff"/>
+        </s:fill>
+        <s:stroke>
+            <s:SolidColorStroke color="0x000000"/>
+        </s:stroke>
+    </s:Rect>
 
-  <s:Rect top="4" left="4" right="4" height="120" radiusX="10" radiusY="10" visible="{talk != null}">
-    <s:fill>
-      <s:SolidColor color="0x1AA3B1"/>
-    </s:fill>
-  </s:Rect>
+    <s:Rect top="4" left="4" right="4" height="120" radiusX="10" radiusY="10" visible="{talk != null}">
+        <s:fill>
+            <s:SolidColor color="0x1AA3B1"/>
+        </s:fill>
+    </s:Rect>
 
-  <s:Rect top="20" right="100" width="64" height="64" visible="{talk != null}">
-    <s:fill>
-      <s:SolidColor color="0xffffff"/>
-    </s:fill>
-    <s:stroke>
-      <s:SolidColorStroke color="black"/>
-    </s:stroke>
-  </s:Rect>
+    <s:Rect top="20" right="100" width="64" height="64" visible="{talk != null}">
+        <s:fill>
+            <s:SolidColor color="0xffffff"/>
+        </s:fill>
+        <s:stroke>
+            <s:SolidColorStroke color="black"/>
+        </s:stroke>
+    </s:Rect>
 
-  <u:VectorImage id="icon" top="22" right="100" width="64" height="64"/>
+    <u:VectorImage id="icon" top="22" right="100" width="64" height="64"/>
 
-  <s:Image id="favoriteImage" top="20" right="20" click="toggleSelection(event)"/>
+    <s:Image id="favoriteImage" top="20" right="20" click="toggleSelection(event)"/>
 
-  <s:Label text="{talk.title}" styleName="title" top="20" left="20" width="420" height="100"/>
+    <s:Label text="{talk.title}" styleName="title" top="20" left="20" width="420" height="100"/>
 
-  <s:Label text="{talk.abstractText}" styleName="content" top="130" left="20" width="{column.width - 40}"
-           height="166" visible="{talk != null}"/>
+    <s:Label text="{talk.abstractText}" styleName="content" top="130" left="20" width="{column.width - 40}"
+             height="166" visible="{talk != null}"/>
 
-  <s:Label text="{resourceManager.getString('dukecon', 'talks.more')}" styleName="link" bottom="10" left="20"
-           visible="{talk != null}"
-           click="onMoreClicked(event)"/>
+    <s:Label text="{resourceManager.getString('dukecon', 'talks.more')}" styleName="link" bottom="10" left="20"
+             visible="{talk != null}"
+             click="onMoreClicked(event)"/>
 
-  <s:Image id="languageImage" bottom="10" right="20" width="48" height="36" source="@Embed('/english-small.png')"
-           visible="false"/>
+    <s:Image id="languageImage" bottom="10" right="20" width="48" height="36" source="@Embed('/english-small.png')"
+             visible="false"/>
 
 </s:GridItemRenderer>
