--- a/core/src/main/flex/org/dukecon/itemrenderer/TalkItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/TalkItemRenderer.mxml
@@ -2,8 +2,13 @@
 <s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
                 xmlns:s="library://ns.adobe.com/flex/spark"
                 xmlns:u="org.dukecon.utils.*"
+                xmlns:parsley="http://www.spicefactory.org/parsley"
                 height="136"
                 click="onItemClick(event)">
+
+    <fx:Declarations>
+        <parsley:Configure/>
+    </fx:Declarations>
 
     <fx:Script>
     <![CDATA[
@@ -17,17 +22,15 @@
         [Bindable]
         protected var trackIcon:Class;
 
-        [Bindable("dataChange")]
-        override public function get data():Object {
-            return super.data;
-        }
+        [Inject]
+        public var trackController:TrackController;
 
-        override public function set data(value:Object):void {
-            super.data = value;
-            talk = Talk(value);
+        override protected function commitProperties():void {
+            super.commitProperties();
 
-            if (value) {
-                trackIcon = TrackController.instance.getIconForTrack(talk.track);
+            talk = Talk(data);
+            if (data) {
+                trackIcon = trackController.getIconForTrack(talk.track);
             } else {
                 trackIcon = null;
             }
@@ -39,7 +42,6 @@
         protected function onItemClick(event:MouseEvent):void {
             dispatchEvent(new ListEvent(data, ListEvent.ITEM_SELECTED));
         }
-
         ]]>
   </fx:Script>
 
