--- a/core/src/main/flex/org/dukecon/views/SpeakersView.mxml
+++ b/core/src/main/flex/org/dukecon/views/SpeakersView.mxml
@@ -4,45 +4,51 @@
 -->
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
         xmlns:s="library://ns.adobe.com/flex/spark"
-        creationComplete="onCreationComplete(event)"
+        xmlns:parsley="http://www.spicefactory.org/parsley"
         title="{resourceManager.getString('dukecon', 'speakers.title')}">
 
-  <fx:Metadata>
-    [ResourceBundle("dukecon")]
-  </fx:Metadata>
+    <fx:Metadata>
+        [ResourceBundle("dukecon")]
+    </fx:Metadata>
 
-  <fx:Script>
+    <fx:Declarations>
+        <parsley:Configure/>
+    </fx:Declarations>
+
+    <fx:Script>
     <![CDATA[
-    import mx.collections.ArrayCollection;
-    import mx.events.FlexEvent;
+        import mx.collections.ArrayCollection;
 
-    import org.dukecon.controller.ConferenceController;
-    import org.dukecon.events.ConferenceDataChangedEvent;
-    import org.dukecon.events.ListEvent;
+        import org.dukecon.controller.ConferenceController;
+        import org.dukecon.events.ConferenceDataChangedEvent;
+        import org.dukecon.events.ListEvent;
 
-    [Bindable]
-    protected var listData:ArrayCollection;
+        [Bindable]
+        protected var listData:ArrayCollection;
 
-    protected function onCreationComplete(event:FlexEvent):void {
-      ConferenceController.instance.addEventListener(
-              ConferenceDataChangedEvent.CONFERENCE_DATA_CHANGED, onConferenceDataChanged);
-      listData = ConferenceController.instance.speakers;
-      list.addEventListener(ListEvent.ITEM_SELECTED, onItemSelected)
-    }
+        [Inject]
+        public var conferenceController:ConferenceController;
 
-    protected function onConferenceDataChanged(event:ConferenceDataChangedEvent):void {
-      listData = ConferenceController.instance.speakers;
-    }
+        [Init]
+        public function init():void {
+            conferenceController.addEventListener(
+                    ConferenceDataChangedEvent.CONFERENCE_DATA_CHANGED, onConferenceDataChanged);
+            listData = conferenceController.speakers;
+            list.addEventListener(ListEvent.ITEM_SELECTED, onItemSelected)
+        }
 
-    protected function onItemSelected(event:ListEvent):void {
-      navigator.pushView(SpeakerView, event.data);
-    }
+        protected function onConferenceDataChanged(event:ConferenceDataChangedEvent):void {
+            listData = conferenceController.speakers;
+        }
 
-    ]]>
+        protected function onItemSelected(event:ListEvent):void {
+            navigator.pushView(SpeakerView, event.data);
+        }
+        ]]>
   </fx:Script>
 
-  <s:List id="list" width="100%" height="100%"
-          itemRenderer="org.dukecon.itemrenderer.SpeakerItemRenderer"
-          dataProvider="{listData}"/>
+    <s:List id="list" width="100%" height="100%"
+            itemRenderer="org.dukecon.itemrenderer.SpeakerItemRenderer"
+            dataProvider="{listData}"/>
 
 </s:View>
